# playhouse-net

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BOOTSTRAP_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  GEMINI.md  LICENSE  PlayHouse.sln  README.ko.md  README.md  SECURITY.md  playhouse-net.sln  verification-results.tap
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-ue-connector.yml
BenchmarkDotNet.Artifacts/results/: PlayHouse.Tests.Performance.Benchmarks.ClientToPlayServerBenchmarks-report-github.md  PlayHouse.Tests.Performance.Benchmarks.ClientToPlayServerBenchmarks-report.csv  PlayHouse.Tests.Performance.Benchmarks.ClientToPlayServerBenchmarks-report.html  PlayHouse.Tests.Performance.Benchmarks.LatencyBenchmarks-report-github.md  PlayHouse.Tests.Performance.Benchmarks.LatencyBenchmarks-report.csv  PlayHouse.Tests.Performance.Benchmarks.MemoryBenchmarks-report-github.md  PlayHouse.Tests.Performance.Benchmarks.MemoryBenchmarks-report.csv  PlayHouse.Tests.Performance.Benchmarks.MemoryBenchmarks-report.html  PlayHouse.Tests.Performance.Benchmarks.ServerMeshBenchmarks-report-github.md  PlayHouse.Tests.Performance.Benchmarks.ServerMeshBenchmarks-report.csv  PlayHouse.Tests.Performance.Benchmarks.ServerMeshBenchmarks-report.html  PlayHouse.Tests.Performance.Benchmarks.ThroughputBenchmarks-report.csv  PlayHouse.Tests.Performance.Benchmarks.ThroughputBenchmarks-report.html
benchmark-results/: benchmark_20251224_201334_multi_size_test.json  benchmark_20251224_202208_summary_test.json  benchmark_20251224_220251_memory_opt_test.json  benchmark_20251224_220810_clean_build_test.json  benchmark_20251224_232643.json  benchmark_20251224_232647.json  benchmark_20251224_232651.json  benchmark_20251224_233341.json  benchmark_20251224_233344.json  benchmark_20251224_233348.json  benchmark_20251225_000055.json  benchmark_20251225_000059.json  benchmark_20251225_000103.json  benchmark_20251225_000819.json  benchmark_20251225_000824.json  benchmark_20251225_000826.json  benchmark_20251225_001017.json  benchmark_20251225_001021.json  benchmark_20251225_001023.json  benchmark_20260120_210909.json  benchmark_20260120_211108.json  benchmark_summary.csv
connector/PlayHouse.Connector/: Connector.cs  ConnectorConfig.cs  ConnectorException.cs  IPlayHouseClient.cs  (+5 more)
connectors/: README.md  REVIEW-CLAUDE.md  REVIEW-CODEX.md  REVIEW-GEMINI.md  run-all-tests.sh
connectors/cpp/: .gitignore  CMakeLists.txt  COMPILE_FIX_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  build.sh  codex-review-output.md  docker-compose.test.yml  example.cpp  run-tests.sh  vcpkg.json
connectors/cpp/cmake/: playhouse-connector-config.cmake.in
connectors/cpp/doc/: docker-e2e.md
connectors/cpp/extensions/: CMakeLists.txt
connectors/cpp/extensions/json/: CMakeLists.txt
connectors/cpp/extensions/json/include/playhouse/extensions/json/: json_packet_extensions.hpp
connectors/cpp/extensions/json/src/: json_packet_extensions.cpp
connectors/cpp/extensions/json/tests/: json_extensions_test.cpp
connectors/cpp/extensions/msgpack/: CMakeLists.txt
connectors/cpp/extensions/msgpack/include/playhouse/extensions/msgpack/: msgpack_packet_extensions.hpp
connectors/cpp/extensions/msgpack/src/: msgpack_packet_extensions.cpp
connectors/cpp/extensions/msgpack/tests/: msgpack_extensions_test.cpp
connectors/cpp/extensions/proto/: CMakeLists.txt
connectors/cpp/extensions/proto/include/playhouse/extensions/proto/: proto_packet_extensions.hpp
connectors/cpp/extensions/proto/src/: proto_packet_extensions.cpp
connectors/cpp/extensions/proto/tests/: proto_extensions_test.cpp
connectors/cpp/include/playhouse/: config.hpp  connector.hpp  packet.hpp  types.hpp
connectors/cpp/scripts/: run-docker-e2e.sh  run-local-e2e.sh
connectors/cpp/src/: asio_include.hpp  client_network.cpp  client_network.hpp  connection.hpp  connector.cpp  endian_utils.hpp  packet.cpp  packet_codec.cpp  packet_codec.hpp  ring_buffer.cpp  ring_buffer.hpp  tcp_connection.cpp  tcp_connection.hpp  ws_connection.cpp  ws_connection.hpp
connectors/cpp/tests/: connector_test.cpp
connectors/cpp/tests/integration/: CMakeLists.txt  base_integration_test.cpp  base_integration_test.hpp  proto_helpers.hpp  test_server_fixture.cpp  test_server_fixture.hpp
connectors/cpp/tests/integration/advanced/: a01_websocket_connection_test.cpp  a02_large_payload_test.cpp  a03_send_method_test.cpp  a04_on_error_event_test.cpp  a05_multiple_connector_test.cpp  a06_edge_case_test.cpp  a07_tls_connection_test.cpp
connectors/cpp/tests/integration/core/: c01_stage_creation_test.cpp  c02_tcp_connection_test.cpp  c03_authentication_success_test.cpp  c05_echo_request_response_test.cpp  c06_push_message_test.cpp  c07_heartbeat_test.cpp  c08_disconnection_test.cpp  c09_authentication_failure_test.cpp  c10_request_timeout_test.cpp  c11_error_response_test.cpp
doc/: architecture-guide.md
docker/: README.md
docs/: OPTIMIZATION_REPORT.md  README.md  connector-callback-performance-fix.md  server-request-callback-performance-fix.md
examples/: README.md
protocol/: README.md
scripts/: run-all-checks.sh
servers/: README.md
tests/: BENCHMARK.md  README.md
tests/benchmark_echo/cpp_client/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  CPP_CLIENT_ISSUES.md  auto_benchmark.sh  run_benchmark.sh
tests/benchmark_echo/cpp_client/asio/: asio.Nconnector.cpp  asio.Nsocket_tcp.cpp  asio.h
tests/benchmark_echo/cpp_client/client/: IMPLEMENTATION_SUMMARY.md  PHASE4_SUMMARY.md  README.md  benchmark_main.cpp  echo_client.cpp  echo_client.h  main.cpp  playhouse_socket.cpp  playhouse_socket.h
tests/benchmark_echo/cpp_client/proto/: CMakeLists.txt
tests/benchmark_echo/cpp_client/protocol/: README.md  packet.h  playhouse_codec.cpp  playhouse_codec.h  test_codec.cpp
tests/benchmark_echo/cpp_client/util/: pch.h
tools/: README.md
(+1192 files in other folders)
